--- a/angular/my-store-app/src/app/product-list/product-list.component.html
+++ b/angular/my-store-app/src/app/product-list/product-list.component.html
@@ -14,6 +14,11 @@
   <button (click)="share()">
     Share
   </button>
+
+  <app-products-alerts
+    [product]="product"
+    (notify)="onNotify()">
+  </app-products-alerts>
 </div>
 
 <!--
