--- a/django/django-todolist/base/templates/base/task_confirm_delete.html
+++ b/django/django-todolist/base/templates/base/task_confirm_delete.html
@@ -1,7 +1,17 @@
-<a href="{% url 'tasks' %}">Go back</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form method="POST" action="">
-  {% csrf_token %}
-  <p>Are you sure you want to delete this task? "{{task}}"</p>
-  <input class="button" type="submit" value="Delete">
-</form>
+<div class="header-bar">
+  <a href="{% url 'tasks' %}">&#8592; back</a>
+</div>
+
+<div class="card-body">
+  <form method="POST">
+    {% csrf_token %}
+    <p>Are you sure you want to delete this task?</p>
+    <p>"{{task}}"</p>
+    <input class="button" type="submit" value="Delete">
+  </form>
+</div>
+
+{% endblock content %}
