--- a/django/django-todolist/base/templates/base/task_form.html
+++ b/django/django-todolist/base/templates/base/task_form.html
@@ -1,8 +1,22 @@
-<h3>Task Form</h3>
-<a href="{% url 'tasks' %}">Go back</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form method="POST" action="">
-  {% csrf_token %}
-  {{form.as_p}}
-  <input type="submit" value="submit">
-</form>
+<div class="header-bar">
+  <a href="{% url 'tasks' %}">&#8592; back</a>
+</div>
+
+<div class="card-body">
+  <form method="POST">
+    {% csrf_token %}
+    <!-- {{form.as_p}} -->
+    <label>{{form.title.label}}</label>
+    {{form.title}}
+    <label>{{form.description.label}}</label>
+    {{form.description}}
+    <label>{{form.complete.label}} {{form.complete}}</label>
+
+    <input style="margin-top: 15px;" class="button" type="submit" value="submit">
+  </form>
+</div>
+
+{% endblock content %}
