--- a/django/django-todolist/base/templates/base/task_list.html
+++ b/django/django-todolist/base/templates/base/task_list.html
@@ -1,20 +1,48 @@
-<h1>My To Do List</h1>
-<a href="{% url 'task-create' %}">Add Task</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<table>
-  <tr>
-    <th>Item</th>
-    <th></th>
-    <th></th>
-  </tr>
+<div class="header-bar">
+  <div>
+    <h1>Hello {{request.user|title}}</h1>
+    <h3 style="margin:0">You have {{count}} incomplete task{{ count|pluralize:"s" }}</h3>
+  </div>
+
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'logout' %}">Logout</a>
+  {% else %}
+  <a href="{% url 'login' %}">Login</a>
+  {% endif %}
+</div>
+
+<div id="search-add-wrapper">
+  <form method="GET" style="margin-top: 2px; display: flex;">
+    <input type="text" name="search-area" value="{{search_input}}">
+    <input style="margin-left: 5px;" class="button" type="submit" value="Search">
+  </form>
+  <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+</div>
+
+<div class="task-item-wrapper">
   {% for task in tasks %}
-  <tr>
-    <td>{{ task.title }}</td>
-    <td><a href="{% url 'task' task.id %}">View</a></td>
-    <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-    <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-  </tr>
+  <div class="task-wrapper">
+    {% if task.complete %}
+    <div class="task-title">
+      <div class="task-complete-icon"></div>
+      <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i>
+    </div>
+    <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+    {% else %}
+    <div class="task-title">
+      <div class="task-incomplete-icon"></div>
+      <a href="{% url 'task-update' task.id %}">{{task}}</a>
+    </div>
+    <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+    {% endif %}
+  </div>
+
   {% empty %}
-    <h3>No items in list</h3>
+  <h3>No items in list</h3>
   {% endfor %}
-</table>
+</div>
+
+{% endblock content %}
