--- a/django/doit_JumpToDjango/mysite/templates/pybo/question_list.html
+++ b/django/doit_JumpToDjango/mysite/templates/pybo/question_list.html
@@ -4,21 +4,22 @@
 <div class="container my-3">
     <table class="table">
         <thead>
-        <tr class="thead-dark">
+        <tr class="text-center thead-dark">
             <th>번호</th>
-            <th>제목</th>
+            <th style="width: 50%;">제목</th>
+            <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         <thead>
         <tbody>
         {% if question_list %}
         {% for question in question_list %}
-        <tr>
+        <tr class="text-center">
             <td>
                 <!-- 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 -->
                 {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
             </td>
-            <td>
+            <td class="text-left">
                 <a href="{% url 'pybo:detail' question.id %}">
                     {{ question.subject }}
                     {% if question.answer_set.count > 0 %}
@@ -28,6 +29,7 @@
                     {% endif %}
                 </a>
             </td>
+            <td>{{ question.author.username }}</td> <!-- 글쓴이 추가 -->
             <td>{{ question.create_date }}</td>
         </tr>
         {% endfor %}
@@ -75,9 +77,11 @@
         </li>
         {% endif %}
     </ul>
-    <!-- 페이징 처리 -->
-    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">
-        질문 등록하기
-    </a>
+    <!-- 페이징 처리 끝 -->
+    {% if user.is_authenticated %} <!-- 로그인 상태에서만 질문 등록 버튼이 보이도록 수정 -->
+        <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">
+            질문 등록하기
+        </a>
+    {% endif %}
 </div>
 {% endblock %}
