--- a/angular/my-store-app/src/app/product-details/product-details.component.html
+++ b/angular/my-store-app/src/app/product-details/product-details.component.html
@@ -1,7 +1,9 @@
-<p>Product Details</p>
+<h2>Product Details</h2>
 
 <div *ngIf="product">
   <h3>{{ product.name }}</h3>
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
+
+  <button (click)="addToCart(product)">Buy</button>
 </div>
