--- a/svelte/svelte_SPA/svelte-movie-app/src/scss/main.scss
+++ b/svelte/svelte_SPA/svelte-movie-app/src/scss/main.scss
@@ -5,7 +5,9 @@ $color--black-50: rgba($color--black, .5);
 $color--white: #fff;
 $color--white-60: rgba($color--white, .6);
 $color--white-50: rgba($color--white, .5);
+$color--white-40: rgba($color--white, .4);
 $color--white-30: rgba($color--white, .3);
+$color--white-20: rgba($color--white, .2);
 $color--white-10: rgba($color--white, .1);
 $color--white-5: rgba($color--white, .05);
 
