--- a/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-basic/public/global.css
+++ b/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-basic/public/global.css
@@ -1,63 +1,232 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+/*** css 초기화 시작 ****************************************************/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    /* font-size: 100%;
+    font: inherit; */
+    vertical-align: baseline;
 }
 
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
+* { box-sizing: border-box; }
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+/*** css 초기화 종료 ****************************************************/
+
+body {
+  position: relative;
+  background-color: #EDEDED;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-a:hover {
-	text-decoration: underline;
+nav.menu-box {
+  display: flex;
+  align-items: flex-end;
+  height: 50px;
+  padding-left: 40px;
+  background-color: #ffffff;
 }
 
-a:visited {
-	color: rgb(0,80,160);
+nav.menu-box a {
+  font-size: 1.2rem;
+  margin-left: 20px;
 }
 
-label {
-	display: block;
+nav.menu-box a.located {
+  font-size: 1.2rem;
+  margin-left: 20px;
+  padding-bottom: 8px;
 }
 
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
+nav.menu-box a:hover {
+  font-size: 1.2rem;
+  margin-left: 20px;
+  padding-bottom: 8px;
 }
 
-input:disabled {
-	color: #ccc;
+.app  {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
+header {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #14B870;
 }
 
-button:disabled {
-	color: #999;
+header .wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 800px;
 }
 
-button:not(:disabled):active {
-	background-color: #ddd;
+header h1 {
+  color: #ffffff;
+  margin-bottom: 20px;
 }
 
-button:focus {
-	border-color: #666;
+header p {
+  font-size: 1rem;
+  color: #ffffff;
+}
+
+header input {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  border-radius: 3px;
+}
+
+.info {
+  /* width: 800px; */
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.info .wrap {
+  width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.info span {
+  color: #444444;
+}
+
+.main {
+  width: 100%;
+  height: calc(100vh - 270px); /* 최상단 메뉴 있을 경울 - 50*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  overflow-y: scroll;
+  /* 스크롤 숨기고 스크롤은 되게: IE, Edge, Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.main::-webkit-scrollbar  {
+  display: none;
+}
+
+
+.main ul {
+  width: 800px;
+  margin-top: 10px;
+}
+
+.main ul li {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #ffffff;
+  font-size: 1rem;
+  color: #444444;
+  border-radius: 3px;
+}
+
+.main ul li span {
+  padding: 7px;
+}
+
+.main ul li input[type="checkbox"] {
+  width:20px;
+  height: 20px;
+  margin-right: 15px;
+}
+
+.main ul li input[type="text"] {
+  padding: 10px;
+  width: 600px;
+  border: 1px solid #6B6B6B;
+}
+
+.main ul li a {
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  text-decoration: none;
+  color: #B8B8B8;
+
+}
+
+/*** utils ****************************************************/
+
+.btn {
+  padding: 0;
+  padding-bottom: 10px;
+  color: #444444;
+  font-size: 0.8em;
+  border: none;
+  margin-left: 0;
+  margin-right: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  border-bottom: 2px solid #005EFF;
+}
+
+.selected {
+  border-bottom: 2px solid #005EFF;
+}
+
+.located {
+  border-bottom: 2px solid #005EFF;
 }
