--- a/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_detail.html
@@ -3,53 +3,63 @@
 {% block content %}
 <div class="container my-3">
   <h2 class="border-bottom py-2">{{ question.subject }}</h2>
-  <div class="card my-3">
-    <div class="card-body">
-      <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
-      <div class="d-flex justify-content-end">
-        {% if question.modify_date %}
-          <div class="badge badge-light p-2 text-left mx-3">
-            <div class="mb-2">{{ question.user.username }} (수정됨)</div>
-            <div>{{ question.modify_date|datetime }}</div>
+  <div class="row my-3">
+    <div class="col-1">
+      <!-- 추천 영역 -->
+      <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ question.voter|length }}</div>
+      <a href="#" data-uri="{{ url_for('vote.question', question_id=question.id) }}" class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
+    </div>
+    <div class="col-11">
+      <!-- 질문 영역 -->
+      <div class="card">
+        <div class="card-body">
+          <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+          <div class="d-flex justify-content-end">
+            {% if question.modify_date %}
+              <div class="badge badge-light p-2 text-left mx-3">
+                <div class="mb-2">{{ question.user.username }} (수정됨)</div>
+                <div>{{ question.modify_date|datetime }}</div>
+              </div>
+            {% else %}
+              <div class="badge badge-light p-2 text-left">
+                <div class="mb-2">{{ question.user.username }}</div>
+                <div>{{ question.create_date|datetime }}</div>
+              </div>
+            {% endif %}
           </div>
-        {% else %}
-          <div class="badge badge-light p-2 text-left">
-            <div class="mb-2">{{ question.user.username }}</div>
-            <div>{{ question.create_date|datetime }}</div>
-          </div>
-        {% endif %}
-      </div>
-      {% if g.user == question.user %}
-        <div class="my-3">
-          <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
-          <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
-        </div>
-      {% endif %}
-      <!-- 질문 댓글 Start -->
-      {% if question.comment_set|length > 0 %}
-        <div class="mt-3">
-          {% for comment in question.comment_set %}
-            <div class="comment py-2 text-muted">
-              <span style="white-space: pre-line;">{{ comment.content }}</span>
-              <span>
-                {% if comment.modify_date %}
-                - {{ comment.user.username }}, {{ comment.modify_date|datetime }} (수정됨)
-                {% else %}
-                - {{ comment.user.username }}, {{ comment.create_date|datetime }}
-                {% endif %}
-              </span>
-              {% if g.user == comment.user %}
-                <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
-                <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
-              {% endif %}
+          {% if g.user == question.user %}
+            <div class="my-3">
+              <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
+              <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
             </div>
-          {% endfor %}
+          {% endif %}
+          <!-- 질문 댓글 Start -->
+          {% if question.comment_set|length > 0 %}
+            <div class="mt-3">
+              {% for comment in question.comment_set %}
+                <div class="comment py-2 text-muted">
+                  <span style="white-space: pre-line;">{{ comment.content }}</span>
+                  <span>
+                    {% if comment.modify_date %}
+                    - {{ comment.user.username }}, {{ comment.modify_date|datetime }} (수정됨)
+                    {% else %}
+                    - {{ comment.user.username }}, {{ comment.create_date|datetime }}
+                    {% endif %}
+                  </span>
+                  {% if g.user == comment.user %}
+                    <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
+                    <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
+                  {% endif %}
+                </div>
+              {% endfor %}
+            </div>
+          {% endif %}
+          <div>
+            <a href="{{ url_for('comment.create_question', question_id=question.id) }}" class="small"><small>댓글 추가 ...</small></a>
+          </div>
+          <!-- 질문 댓글 End -->
         </div>
-      {% endif %}
-      <div>
-        <a href="{{ url_for('comment.create_question', question_id=question.id) }}" class="small"><small>댓글 추가 ...</small></a>
       </div>
-      <!-- 질문 댓글 End -->
     </div>
   </div>
   <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
@@ -142,6 +152,11 @@
   $(document).ready(function () {
     $('.delete').on('click', function () {
       if (confirm('정말로 삭제하시겠습니까?')) {
+        location.href = $(this).data('uri');
+      }
+    });
+    $('.recommend').on('click', function () {
+      if (confirm('정말로 추천하시겠습니까?')) {
         location.href = $(this).data('uri');
       }
     });
