--- a/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_form.html
+++ b/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-  <h5 class="my-3 border-bottom pb-2">질문 등록</h5>
+  <h5 class="my-3 border-bottom pb-2">{{ form.label }}</h5>
   <form method="post" class="post-form my-3">
     {{ form.csrf_token }}
     <!-- 오류표시 Start -->
