--- a/django/doit_JumpToDjango/projects/mysite/templates/pybo/question_detail.html
+++ b/django/doit_JumpToDjango/projects/mysite/templates/pybo/question_detail.html
@@ -184,5 +184,6 @@ $(document).ready(function () {
     }
   });
 });
+var simplemde = new SimpleMDE({ element: $("#MyID")[0] });
 </script>
 {% endblock %}
