--- a/django/doit_JumpToDjango/projects/mysite/templates/pybo/question_form.html
+++ b/django/doit_JumpToDjango/projects/mysite/templates/pybo/question_form.html
@@ -23,9 +23,15 @@
     </div>
     <div class="form-group">
       <label for="content">내용</label>
-      <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
+      <textarea class="form-control" name="content" id="content" rows="5">{{ form.content.value|default_if_none:'' }}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">저장하기</button>
   </form>
 </div>
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+var simplemde = new SimpleMDE({ element: $("#MyID")[0] });
+</script>
 {% endblock %}
