--- a/django/doit_JumpToDjango/projects/mysite/templates/base.html
+++ b/django/doit_JumpToDjango/projects/mysite/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <!-- simpleMDE -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <title>Hello, pybo!</title>
   </head>
   <body>
