--- a/flask/doit_JumpToFlask/projects/myproject/pybo/templates/base.html
+++ b/flask/doit_JumpToFlask/projects/myproject/pybo/templates/base.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}" />
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <!-- simpleMDE -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <title>Hello, pybo!</title>
   </head>
   <body>
