--- a/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_form.html
+++ b/flask/doit_JumpToFlask/projects/myproject/pybo/templates/question/question_form.html
@@ -24,3 +24,9 @@
   </form>
 </div>
 {% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+var simplemde = new SimpleMDE({ element: $("#MyID")[0] });
+</script>
+{% endblock %}
