--- a/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/landing.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/landing.html
@@ -21,7 +21,11 @@
         <div class="row justify-content-between">
           <div class="col-lg-6 text-light">
             <h1 class="mt-5 mb-3">Do It Django</h1>
-            <p>파이썬 진영의 가장 대표적인 웹프레임워크 중 하나인 django를 이용하여 여러분만의 블로그 사이트를 만들어보세요.</p>
+            <p style="line-height: 1.8em;">
+              파이썬 진영의 가장 대표적인 웹프레임워크 중 하나인 Django를 책을 통해 학습하면서 제작한 블로그 사이트 입니다.<br />
+              해당 소스는 「Do it! 장고 + 부트스트랩 웹 개발의 정석」 저자가 제공한 것이며 저작권은 저자와 출판사에 있습니다.<br />
+              (일부 디자인 적인 부분과 사소한 기능을 수정하였습니다.)
+            </p>
           </div>
 
           <div class="col-lg-5 mt-5">
