--- a/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
@@ -26,7 +26,7 @@
               HTML, CSS, JavaScript, Python, Django로 재미있는 웹 사이트를 만드는 것을 공부 중입니다.
             </p>
 
-            <ul>
+            <ul style="line-height: 1.8em;">
               <li>WORK EXPERIENCE</li>
               <ul>
                 <li>모바일 게임 개발 (2019.10 ~)</li>
