study django 2021-10-03 이력 내용 수정

--- a/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
@@ -29,13 +29,18 @@
             <ul style="line-height: 1.8em;">
               <li>WORK EXPERIENCE</li>
               <ul>
-                <li>모바일 게임 개발 (2019.10 ~)</li>
-                <li>MMORPG 게임 개발 (2016.02 ~ 2019.09)</li>
+                <li>타온플레이, '엘라의 2048' 모바일 게임 개발 (2017.12~2019.02)</li>
+                <li>공게임즈, '이사만루' 시리즈 모바일 게임 개발 (2014.05~2017.11)</li>
+                <li>DBROS, '전쟁의 시대' 모바일 게임 개발 (2013.04~2014.03)</li>
+                <li>하이원 엔터테인먼트, '아인호른' MMORPG 온라인 게임 개발 (2010.12~2012.07)</li>
+                <li>디블럭 엔터테인먼트, '더 가디언' MMORPG 온라인 게임 개발 (2009.05~2010.09)</li>
+                <li>CJIG, '이스' MMORPG 온라인 게임 개발 (2004.10~2008.10)</li>
+                <li>디지털 드림 스튜디오, '열대펭귄 페닝' 애니메이션 제작 참여 (2002.10~2004.01)</li>
               </ul>
               <li>EDUCATION</li>
               <ul>
-                <li>공학석사, 장고공학(Django Engineering), 파이썬대학교 (2007.09~2009.08)</li>
-                <li>공학학사, 장고공학(Django Engineering), 파이썬대학교 (2003.03~2007.08)</li>
+                <li>전자 정보학, 창신 전문대학 (1997.03~1998.08)</li>
+                <li>진주 고등학교 (1994.03~1997.02)</li>
               </ul>
             </ul>
           </div>
