--- a/flask/flask-web-service-inflearn/02_웹 기초/02_css/연습문제/css/style.css
+++ b/flask/flask-web-service-inflearn/02_웹 기초/02_css/연습문제/css/style.css
@@ -4,7 +4,8 @@ h1 {
 }
 
 table {
-  float: right;
+  /*float: right;*/
+  margin: 0 auto;
   border: 2px solid #444444;
   border-collapse: collapse;
 }
