--- a/flask/flask-web-service-inflearn/03_플라스크 시작/02_GET POST 요청 처리/02_POST/templates/index.html
+++ b/flask/flask-web-service-inflearn/03_플라스크 시작/02_GET POST 요청 처리/02_POST/templates/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form method="post">
+    <form action="/post" method="post">
       <p>이름 : <input type="text" id="input" name="input" /></p>
       <p>이름을 입력하고 제출버튼을 누르세요. <input type="submit" value="제출" onclick="alert('제출 완료!')" /></p>
     </form>
