--- a/flask/flask-web-service-inflearn/04_FileServer/templates/base.html
+++ b/flask/flask-web-service-inflearn/04_FileServer/templates/base.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>File Server</title>
 
-    <link rel="icon" href="/static/images/favicon.png" />
+    <!--<link rel="icon" href="/static/images/favicon.ico" />-->
+    <link rel="icon" href="{{ url_for('static', filename='/images/favicon.ico') }}" />
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   </head>
