--- a/flask/flask-web-service-inflearn/04_FileServer/templates/check.html
+++ b/flask/flask-web-service-inflearn/04_FileServer/templates/check.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <body style="text-align: center" onload="javascript:onload()">
-  <h3>파일 업로드 성공!</h3>
+  <h3 class="mt-3">파일 업로드 성공!</h3>
   <hr width="100%" color="black" />
 
-  <img src="{{ url_for('static', filename='images/tick.png') }}" width="100" />
+  <img src="{{ url_for('static', filename='images/tick.png') }}" class="mt-5" width="100" />
 
   <script language="javascript">
     function onload() {
