--- a/flask/flask-web-service-inflearn/04_FileServer/templates/base.html
+++ b/flask/flask-web-service-inflearn/04_FileServer/templates/base.html
@@ -10,8 +10,24 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/042ed8e854.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="col-md-4 mt-3">
+      <h3><i class="fa fa-folder-open fa-lg"></i>&nbsp;File Server</h3>
+    </div>
+    <hr width="100%" class="divider" />
+
+    <div class="mr-5 text-md-right">
+      <span class="float-left mt-2 ml-5">
+        <h6>폴더: {{ pwd }}</h6>
+      </span>
+      <img src="/static/images/upload.png" width="50" />
+      <img src="/static/images/download.png" width="50" />
+    </div>
+    <hr width="100%" class="divider" />
+
     {% block content %}
     {% endblock %}
 
