--- a/flask/flask-web-service-inflearn/04_FileServer/templates/check.html
+++ b/flask/flask-web-service-inflearn/04_FileServer/templates/check.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<body style="text-align: center" onload="javascript:onload()">
-  <h3 class="mt-3">파일 업로드 성공!</h3>
-  <hr width="100%" color="black" />
-
-  <img src="{{ url_for('static', filename='images/tick.png') }}" class="mt-5" width="100" />
+<body onload="javascript:onload()">
+  <div class="jumbotron text-center">
+    <h3>파일 업로드 성공!</h3>
+    <img src="{{ url_for('static',filename='images/tick.png') }}" class="mt-5" width="100" />
+  </div>
 
   <script language="javascript">
     function onload() {
