--- a/django/doit_django_AtoZ/django-tutorial/mysite/blog/templates/blog/comment_form.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/blog/templates/blog/comment_form.html
@@ -6,8 +6,13 @@
 {% block main_area %}
   <h1>Edit Comment</h1>
   <hr/>
-  <form method="post" id="comment-form">{% csrf_token %}
-    {{ form|crispy }}
+  <form method="post" id="comment-form">
+    {% csrf_token %}
+    <!--{{ form|crispy }}-->
+    <div class="form-group">
+      <label for="content">Comment</label>
+      <textarea class="form-control" name="content" id="content" rows="10" required>{{ form.content.value|default_if_none:'' }}</textarea>
+    </div>
     <button type="submit" class="btn btn-primary float-right">Submit</button>
   </form>
 {% endblock %}
