--- a/django/doit_django_AtoZ/django-tutorial/mysite/blog/templates/blog/post_list.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/blog/templates/blog/post_list.html
@@ -46,7 +46,7 @@
 
       <p class="card-text mb-4">{{ post.get_content_markdown|truncatewords_html:45|safe }}</p>
 
-      <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+      <a href="{{ post.get_absolute_url }}" class="btn btn-sm btn-outline-primary">Read More &rarr;</a>
     </div>
 
     <div class="card-footer text-muted">
