--- a/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
+++ b/django/doit_django_AtoZ/django-tutorial/mysite/single_pages/templates/single_pages/about_me.html
@@ -17,7 +17,7 @@
     {% include 'blog/navbar.html' %}
 
     <section>
-      <div class="container mt-4">
+      <div class="container mt-4 mb-4">
         <div class="row">
           <div class="col-lg-8">
             <h1>안녕하세요. 임채영입니다.</h1>
@@ -51,10 +51,10 @@
       </div>
     </section>
 
-    <section class="bg-light margin-for-footer">
-      <div class="container">
+    <section class="bg-light">
+      <div class="container mb-4">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 mt-3">
             <h1>PORTFOLIO</h1>
           </div>
         </div>
@@ -176,9 +176,7 @@
       </div>
     </div>
 
-    <div class="fixed-bottom">
-      {% include 'blog/footer.html' %}
-    </div>
+    {% include 'blog/footer.html' %}
 
     <!-- Bootstrap core JavaScript -->
     <script src="./src/index.js"></script>
