--- a/django/django-instagram/djangogram/templates/users/main.html
+++ b/django/django-instagram/djangogram/templates/users/main.html
@@ -1,1 +1,6 @@
-This is main.html
+<form action="{% url 'users:main' %}" method='post'>
+  {% csrf_token %}
+  <input type="input" name="username" placeholder="username">
+  <input type="password" name="password" placeholder="password">
+  <button type="submit">Login</button>
+</form>
