--- a/node_js/Express/express-js-cli-app_express-handlebars/views/layouts/layout.hbs
+++ b/node_js/Express/express-js-cli-app_express-handlebars/views/layouts/layout.hbs
@@ -5,6 +5,6 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    {% block content %}{% endblock %}
+    {{{body}}}
   </body>
 </html>
