--- a/node_js/fullstack_js/Part02_Express_js_Guide/33-sfy-gallery/views/index.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/33-sfy-gallery/views/index.hbs
@@ -1,2 +1,15 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+  <div class="row">
+    <h1>title<small> by author</small></h1>
+    <p>description</p>
+  </div>
+  <div class="row">
+    <ul class="thumbnails">
+      <li class="span3">
+        <a class="thumbnail" href="#" target="_blank">
+          <img src="" title="image caption" alt="image">
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
