--- a/node_js/fullstack_js/Part02_Express_js_Guide/33-sfy-gallery/views/layouts/layout.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/33-sfy-gallery/views/layouts/layout.hbs
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+
+    <link rel="stylesheet" href="/stylesheets/flatly-bootstrap.min.min.css" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap-responsive.min.css" />
   </head>
   <body>
     {{{body}}}
