--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layouts/layout.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layouts/layout.hbs
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>{{title}} | {{appname}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/main.css' />
+    <link rel='stylesheet' href='/bootstrap/bootstrap.css' />
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      <div class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="/" class="navbar-brand">{{appname}}</a>
+          </div>
+        </div>
+      </div>
+      <div class="alert alert-dismissable"></div>
+      <h1>{{title}}</h1>
+      <p>
+        Welcome to Express.js Todo app by
+        <a href="http://twitter.com/azat_co">@azat_co. Please enjoy.</a>
+      </p>
+      {{{body}}}
+    </div>
+
+    <script src="/javascripts/jquery.js"></script>
+    <script src="/javascripts/main.js"></script>
   </body>
 </html>
