--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layouts/layout.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layouts/layout.hbs
@@ -19,7 +19,7 @@
       <h1>{{title}}</h1>
       <p>
         Welcome to Express.js Todo app by
-        <a href="http://twitter.com/azat_co">@azat_co. Please enjoy.</a>
+        <a href="http://twitter.com/azat_co" target="_blank">@azat_co</a>. Please enjoy.
       </p>
       {{{body}}}
     </div>
