--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
@@ -14,3 +14,43 @@
 </div>
 
 <h1>{{title}}</h1>
+
+<div class="list">
+  <div class="item add-task">
+    <form action="/tasks" method="POST">
+      <input type="hidden" value="true" name="all_done">
+      <input type="hidden" value="{{_csrf}}" name="_csrf">
+      <button type="submit" class="btn btn-success btn-xs">all done</button>
+    </form>
+    <form action="/tasks" method="POST">
+      <input type="hidden" value="{{_csrf}}" name="_csrf">
+      <div class="name">
+        <input type="text" name="name" placeholder="Add a new task">
+      </div>
+      <div class="delete">
+        <button type="submit" class="btn btn-primary btn-sm">add</button>
+      </div>
+    </form>
+  </div>
+  {{#if tasks}}
+    {{#each tasks as |task|}}
+    <div class="item">
+      <div class="action">
+        <!-- {{task.name}} TODO: 객체의 요소에 접근할 수가 없다... -->
+        {{task}}
+      </div>
+      <div class="num"><span>{{@index}}</span>.&nbsp;</div>
+      <div class="name">
+        <span class="name">{{task.name}}</span>
+      </div>
+      <div class="delete">
+        <a href="" class="btn btn-danger btn-xs task-delete" data-task-id="{{task._id}}.toString()">delete</a>
+      </div>
+    </div>
+    {{/each}}
+  {{else}}
+  <div class="item">
+    No tasks.
+  </div>
+  {{/if}}
+</div>
