--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
@@ -33,11 +33,11 @@
     </form>
   </div>
   {{#if tasks}}
-    {{#each tasks as |task|}}
+    {{#each tasks as |task index|}}
     <div class="item">
       <div class="action">
       </div>
-      <div class="num"><span>{{@index}}</span>.&nbsp;</div>
+      <div class="num"><span>{{index}}</span>.&nbsp;</div>
       <div class="name">
         <span class="name">{{task.name}}</span>
       </div>
