--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layout.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/layout.hbs
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="alert alert-dismissable"></div>
-      <h1>{{title}}</h1>
+      <h1>Todo App</h1>
       <p>
         Welcome to Express.js Todo app by
         <a href="http://twitter.com/azat_co" target="_blank">@azat_co</a>. Please enjoy.
