--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/views/tasks.hbs
@@ -13,21 +13,23 @@
   </ul>
 </div>
 
-<h1>{{title}}</h1>
+<hr />
 
 <div class="list">
   <div class="item add-task">
-    <form action="/tasks" method="POST">
-      <input type="hidden" value="true" name="all_done">
-      <input type="hidden" value="{{_csrf}}" name="_csrf">
-      <button type="submit" class="btn btn-success btn-xs">all done</button>
-    </form>
+    <div class="action">
+      <form action="/tasks" method="POST">
+        <input type="hidden" value="true" name="all_done">
+        <input type="hidden" value="{{_csrf}}" name="_csrf">
+        <button type="submit" class="btn btn-success btn-xs">all done</button>
+      </form>
+    </div>
     <form action="/tasks" method="POST">
       <input type="hidden" value="{{_csrf}}" name="_csrf">
       <div class="name">
         <input type="text" name="name" placeholder="Add a new task">
       </div>
-      <div class="delete">
+      <div class="add">
         <button type="submit" class="btn btn-primary btn-sm">add</button>
       </div>
     </form>
@@ -45,7 +47,10 @@
       </div>
       <div class="num"><span>{{index}}</span>.&nbsp;</div>
       <div class="name">
-        <span class="name">{{task.name}} <small>(Created at: {{task.createTime}})</small></span>
+        {{task.name}}
+        <span class="time">
+          <small>(Created at: 2021/10/19{{task._createTime}})</small>
+        </span>
       </div>
       <div class="delete">
         <a href="" class="btn btn-danger btn-xs task-delete" data-task-id="{{task._id}}" data-cstf="{{_csrf}}">delete</a>
