--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/base.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/base.html
@@ -12,6 +12,10 @@
   <title>Hello, pybo!</title>
 </head>
 <body>
+  <!-- 내비게이션 바 Start -->
+  {% include "navbar.html" %}
+  <!-- 내비게이션 바 End -->
+
   <!-- 기본 템플릿에 삽입할 내용 Start -->
   {% block content %}
   {% endblock %}
