--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -10,13 +10,13 @@
       </div>
       <div class="d-flex justify-content-end">
         <div class="badge badge-light p-2">
-          {{ question.create_date }}
+          {{ question.create_date|datetime }}
         </div>
       </div>
     </div>
   </div>
 
-  <h5>{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
+  <h5 class="border-bottom py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
   {% for answer in question.answer_set %}
   <div class="card my-3">
     <div class="card-body">
@@ -25,7 +25,7 @@
       </div>
       <div class="d-flex justify-content-end">
         <div class="badge badge-light p-2">
-          {{ answer.create_date }}
+          {{ answer.create_date|datetime }}
         </div>
       </div>
     </div>
