--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_list.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_list.html
@@ -33,43 +33,46 @@
 
   <!-- 페이징 처리 Start -->
   <ul class="pagination justify-content-center">
-    <!-- 이전 페이지 -->
-    {% if question_list.has_prev %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ question_list.prev_num }}">이전</a>
-      </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
-      </li>
-    {% endif %}
-    <!-- 페이지 -->
-    {% for page_num in question_list.iter_pages() %}
-      {% if page_num %}
-        {% if page_num != question_list.page %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-          </li>
-        {% else %}
-          <li class="page-item active" area-current="page">
-            <a class="page-link" href="#">{{ page_num }}</a>
-          </li>
-        {% endif %}
+    <!-- 페이지가 2페이지 이상일 때 페이지 표시 출력함 -->
+    {% if question_list.total > 10 %}
+      <!-- 이전 페이지 -->
+      {% if question_list.has_prev %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ question_list.prev_num }}">이전</a>
+        </li>
       {% else %}
-        <li class="disabled">
-          <a class="page-link" href="#">...</a>
+        <li class="page-item disabled">
+          <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
         </li>
       {% endif %}
-    {% endfor %}
-    <!-- 다음 페이지 -->
-    {% if question_list.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ question_list.next_num }}">다음</a>
-      </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
-      </li>
+      <!-- 페이지 -->
+      {% for page_num in question_list.iter_pages() %}
+        {% if page_num %}
+          {% if page_num != question_list.page %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            </li>
+          {% else %}
+            <li class="page-item active" area-current="page">
+              <a class="page-link" href="#">{{ page_num }}</a>
+            </li>
+          {% endif %}
+        {% else %}
+          <li class="disabled">
+            <a class="page-link" href="#">...</a>
+          </li>
+        {% endif %}
+      {% endfor %}
+      <!-- 다음 페이지 -->
+      {% if question_list.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ question_list.next_num }}">다음</a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+        </li>
+      {% endif %}
     {% endif %}
   </ul>
   <!-- 페이징 처리 End -->
