--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/navbar.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/navbar.html
@@ -1,16 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <a class="navbar-brand" href="{{ url_for('main.index') }}">Pybo</a>
-  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">계정 생성</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">로그인</a>
-      </li>
-    </ul>
+  <div class="container">
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">Pybo</a>
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      {% if g.user %}
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ g.user.username }} (로그아웃)</a>
+        </li>
+      </ul>
+      {% else %}
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.signup') }}">계정 생성</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a>
+        </li>
+      </ul>
+      {% endif %}
+    </div>
   </div>
 </nav>
