--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/answer/answer_form.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/answer/answer_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <h5 class="my-3 border-bottom pb-2">답변 수정</h5>
-  <form method="POST" class="post-form">
+  <form method="POST" class="post-form my-3">
     {{ form.csrf_token }}
     {% include "form_errors.html" %}
     <div class="form-group">
