--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -22,10 +22,34 @@
       </div>
       {% if g.user == question.user %}
       <div class="my-3">
-        <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
-        <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+        <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
+        <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
       </div>
       {% endif %}
+      <!-- 질문 댓글 Start -->
+      {% if question.comment_set|length > 0 %}
+      <div class="mt-3">
+        {% for comment in question.comment_set %}
+        <div class="comment py-2 text-muted">
+          <span style="white-space: pre-line">{{ comment.content }}</span>
+          <span>
+            - {{ comment.user.username }}
+            {% if comment.modify_date %}
+            <small>(수정 {{ comment.modify_date|datetime }})</small>
+            {% else %}
+            <small>({{ comment.create_date|datetime }})</small>
+            {% endif %}
+          </span>
+          {% if g.user == comment.user %}
+          <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
+          <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
+          {% endif %}
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <a href="{{ url_for('comment.create_question', question_id=question.id) }}" class="small">댓글 추가 ..</a>
+      <!-- 질문 댓글 End -->
     </div>
   </div>
 
@@ -50,10 +74,34 @@
       </div>
       {% if g.user == question.user %}
       <div class="my-3">
-        <a href="{{ url_for('answer.modify', answer_id=answer.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
-        <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+        <a href="{{ url_for('answer.modify', answer_id=answer.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
+        <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
       </div>
       {% endif %}
+      <!-- 답변 댓글 Start -->
+      {% if answer.comment_set|length > 0 %}
+      <div class="mt-3">
+        {% for comment in answer.comment_set %}
+        <div class="comment py-2 text-muted">
+          <span style="white-space: pre-line">{{ comment.content }}</span>
+          <span>
+            - {{ comment.user.username }}
+            {% if comment.modify_date %}
+            <small>(수정 {{ comment.modify_date|datetime }})</small>
+            {% else %}
+            <small>({{ comment.create_date|datetime }})</small>
+            {% endif %}
+          </span>
+          {% if g.user == comment.user %}
+          <a href="{{ url_for('comment.modify_answer', comment_id=comment.id) }}" class="small">수정</a>,
+          <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_answer', comment_id=comment.id) }}">삭제</a>
+          {% endif %}
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}" class="small">댓글 추가 ..</a>
+      <!-- 답변 댓글 End -->
     </div>
   </div>
   {% endfor %}
