--- a/flask/doit_JumpToFlask/flask-tutorial/mysite/pybo/templates/answer/answer_form.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite/pybo/templates/answer/answer_form.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container my-3">
+<div class="container">
   <h5 class="border-bottom pb-2">답변 수정</h5>
-  <form class="post-form" method="post">
+  <form method="post" class="post-form my-3" >
     {{ form.csrf_token }}
     {% include "form_errors.html" %}
     <div class="form-group">
