--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/comment/comment_form.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/comment/comment_form.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <div class="container">
-  <h5 class="border-bottom pb-2">댓글 추가</h5>
-  <form method="post" class="post-form my-3">
+  <h5 class="my-3 border-bottom pb-2">댓글 등록</h5>
+  <form method="POST" class="post-form my-3">
     {{ form.csrf_token }}
     {% include "form_errors.html" %}
     <div class="form-group">
-      <label for="content">작성 내용</label>
-      <textarea class="form-control" name="content" id="content" rows="3">{{ form.content.data or '' }}</textarea>
+      <label for="content">댓글 내용</label>
+      <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.data or '' }}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">저장하기</button>
   </form>
