--- a/flask/python-web-inflearn/03_웹프로그래밍 - 입문/4_게시판 만들기 - 글 리스트/templates/list.html
+++ b/flask/python-web-inflearn/03_웹프로그래밍 - 입문/4_게시판 만들기 - 글 리스트/templates/list.html
@@ -51,7 +51,7 @@
         <tbody>
           {% for data in datas %}
           <tr>
-            <td>{{ loop.index + ((page - 1) * limit)}}</td>
+            <td>{{ total - ((page - 1) * limit) - loop.index0 }}</td>
             <td><a href="{{ url_for('board_view', idx=data._id, page=page, search=search, keyword=keyword) }}">{{ data.title }}</a></td>
             <td>{{ data.name }}</td>
             <td>{{ data.created_at|formatdatetime }}</td>
