--- a/flask/python-web-inflearn/04_웹프로그래밍 - 중급/2_Blueprint를 사용해서 라우팅 하기/main/templates/edit.html
+++ b/flask/python-web-inflearn/04_웹프로그래밍 - 중급/2_Blueprint를 사용해서 라우팅 하기/main/templates/edit.html
@@ -13,7 +13,7 @@
       {% endif %}
     {% endwith %}
     <table>
-      <form name="form" action="/board/edit/{{ data._id }}" method="POST">
+      <form name="form" action="{{ url_for('board.board_edit', idx=data._id) }}" method="POST">
         <tr>
           <td>작성자</td>
           <td><input type="text" name="name" value="{{ session['name'] }}" readonly></td>
