--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/login.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/login.html
@@ -13,7 +13,7 @@
       {% endif %}
     {% endwith %}
     <table>
-      <form name="form" action="/member/login" method="POST">
+      <form name="form" action="{{ url_for('member.member_login') }}" method="POST">
         {% if next_url %}
           <input type="hidden" name="next_url" value="{{ next_url }}">
         {% endif %}
