--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/write.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/write.html
@@ -13,7 +13,7 @@
       {% endif %}
     {% endwith %}
     <table>
-      <form name="form" action="/board/write" method="POST">
+      <form name="form" action="{{ url_for(board.board_write) }}" method="POST">
         <tr>
           <td>작성자</td>
           <td><input type="text" name="name" value="{{ session['name'] }}" readonly></td>
