--- a/flask/python-web-inflearn/04_웹프로그래밍 - 중급/3_플라스크 템플릿 상속 기능으로 HTML 파일 구조화하기/main/templates/register.html
+++ b/flask/python-web-inflearn/04_웹프로그래밍 - 중급/3_플라스크 템플릿 상속 기능으로 HTML 파일 구조화하기/main/templates/register.html
@@ -14,7 +14,7 @@
         <td><input type="email" name="email"></td>
       </tr>
       <tr>
-        <td>이름</td>
+        <td>사용자명</td>
         <td><input type="text" name="name"></td>
       </tr>
       <tr>
