--- a/flask/python-web-inflearn/04_웹프로그래밍 - 중급/5_디자인을 위해 부트스트랩 사용하기/templates/edit.html
+++ b/flask/python-web-inflearn/04_웹프로그래밍 - 중급/5_디자인을 위해 부트스트랩 사용하기/templates/edit.html
@@ -3,7 +3,7 @@
 {% block title %}Flask board - Edit{% endblock %}
 
 {% block content %}
-<div class="card my-3" style="width: 800px">
+<div class="card" id="edit" style="width: 800px">
   <div class="card-body">
     <h5 class="card-title mr-4 text-center">작성된 글 수정</h5>
     <form name="form" action="{{ url_for('board.board_edit', idx=data._id) }}" method="POST" onsubmit="return checkForm()" class="mt-4 mr-4">
