--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/login.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Flask board - Login{% endblock %}
 
 {% block content %}
-<div class="card my-3" style="width: 600px">
+<div class="card" id="login" style="width: 600px">
   <div class="card-body">
     <h5 class="card-title mr-4 text-center">사용자 로그인</h5>
     <form name="form" action="{{ url_for('member.member_login') }}" method="POST" onsubmit="return checkForm()" class="mt-4 mr-4">
