--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/register.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Flask board - Register{% endblock %}
 
 {% block content %}
-<div class="card my-3" style="width: 600px">
+<div class="card" id="register" style="width: 600px">
   <div class="card-body">
     <h5 class="card-title mr-4 text-center">회원 등록</h5>
     <form name="form" action="{{ url_for('member.member_register') }}" method="POST" onsubmit="return checkForm()" class="mt-4 mr-4">
